# Lumirix

./: .gitignore  AGENTS.md  Cargo.toml  README.md
crates/lumirix-cli/: Cargo.toml
crates/lumirix-cli/src/: main.rs
crates/lumirix-core/: Cargo.toml
crates/lumirix-core/src/: config.rs  db.rs  git.rs  init.rs  lib.rs  paths.rs  policy_default.rs
crates/lumirix-core/src/evidence/: detect.rs  mod.rs  model.rs  relevance.rs
crates/lumirix-core/src/report/: mod.rs  model.rs  next_steps.rs  verdict.rs
crates/lumirix-core/src/risk/: mod.rs  model.rs  rules.rs
crates/lumirix-core/src/run/: diff.rs  id.rs  mod.rs  model.rs  process.rs  rollback.rs  store.rs
crates/lumirix-core/tests/: mvp_pipeline.rs
scripts/: build.ps1  demo.ps1
