[package]
name = "lumirix-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core library for Lumirix: config, paths, git, init, and storage"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
toml.workspace = true
